# my-ai-assistant

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  AGENTS.md  README.md  alembic.ini  compose.observability.yaml  compose.yaml  pyproject.toml
backend/app/: agent.py  concurrency.py  config.py  db.py  dependencies.py  llama.py  main.py  model_history.py  models.py  observability.py  request_security.py  schemas.py  security.py  test_db_safety.py
backend/app/auth/: __init__.py  dependencies.py
backend/app/database/: __init__.py  core.py  dependencies.py  models.py
backend/app/observability/: __init__.py  logging.py  metrics.py  middleware.py
backend/app/routers/: auth.py  chat.py  conversations.py  messages.py
backend/app/tools/: __init__.py  mcp_metrics.py  registrations.py  response_guidance.py  runtime.py  tft_meta_deck_tools.py  tft_meta_decks.py  tool_progress.py  toolsets.py  weather_server.py  weather_toolset.py
backend/app/web/: __init__.py  dependencies.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 20260716_0001_create_conversation_tables.py  20260718_0002_create_auth_storage.py  20260718_0003_require_conversation_owners.py  20260723_0004_create_model_messages.py
backend/prometheus/: prometheus.yml
backend/tests/: conftest.py  test_agent.py  test_auth_login.py  test_auth_session.py  test_auth_signup.py  test_ci_failure_probe.py  test_concurrency.py  test_config.py  test_conversations.py  test_database.py  test_database_safety.py  test_db.py  test_main.py  test_message_concurrency.py  test_message_failures.py  test_message_streaming.py  test_messages.py  test_migrations.py  test_models.py  test_observability.py  test_request_security.py  test_route_auth_inventory.py  test_runtime_logging.py  test_security.py
backend/tests/app/: test_agent.py  test_config.py  test_llama.py  test_main.py  test_model_history.py
backend/tests/auth/: test_auth_login.py  test_auth_session.py  test_auth_signup.py  test_security.py
backend/tests/conversations/: test_concurrency.py  test_conversation_deletion.py  test_conversations.py  test_message_concurrency.py  test_message_failures.py  test_message_streaming.py  test_messages.py
backend/tests/database/: test_database.py  test_database_safety.py  test_db.py  test_migrations.py  test_models.py
backend/tests/observability/: test_dashboard.py  test_observability.py  test_runtime_logging.py
backend/tests/support/: database_safety.py
docs/: product.md  (+2 more)
(+59 files in other folders)
