[project]
name = "my-ai-assistant-backend"
version = "0.1.0"
description = "Backend for the AI assistant"
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.18,<2",
    "argon2-cffi>=25.1,<26",
    "asyncpg>=0.31,<0.32",
    "fastapi[standard]>=0.130,<0.140",
    "httpx>=0.28,<0.29",
    "pydantic>=2.13,<3",
    "pydantic-ai==2.9.1",
    "prometheus-client>=0.23,<1",
    "sqlalchemy[asyncio]>=2.0.51,<2.1",
    "sse-starlette>=3,<4",
    "structlog>=26.1,<26.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1,<2",
    "pytest>=9.1,<10",
    "pytest-asyncio>=1.4,<2",
    "ruff>=0.15,<0.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "unit: tests isolated from external boundaries",
    "integration: tests that cross an HTTP, database, or process boundary",
    "contract: tests that preserve a public or cross-module interface",
]

[tool.ruff]
target-version = "py314"

[tool.pyright]
include = ["app", "tests"]
pythonVersion = "3.14"
